Merge 8343 from 2.6 for CDV-685.
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@8385 7fc7bbf3-cf45-46d4-be06-341739edd864