@@ -10,6 +10,7 @@ import org.osgi.framework.ServiceReference;
 
 import com.terracottatech.config.Modules;
 
+import java.io.File;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Dictionary;
@@ -48,7 +49,10 @@ public interface EmbeddedOSGiRuntime {
       int repoCount = modules.sizeOfRepositoryArray();
       for (int i = 0; i < repoCount; i++) {
         final String location = modules.getRepositoryArray(i);
-        repoList.add(new URL(location.replaceFirst("^/", "file:///")));
+        File file = Resolver.resolveRepositoryLocation(location);
+        if(file != null) {
+          repoList.add(file.toURI().toURL());
+        }
       }
       return new KnopflerfishOSGi((URL[]) repoList.toArray(new URL[0]));
     }
